@@ -12,6 +12,7 @@ Version 1.0.4
 * Fix puzzle holes not swapping to puzzle done objects.
 * Fix several collision and sound source issues in flipped rooms.
 * Fix several pushable sound and object collision bugs.
+* Fix original bug with incorrect climb up behaviour on ladders under sloped ceilings.
 * Fix TR1 centaur bubble targetting.
 * Fix caustics not turning off in display settings.
 
